--- a/mecanumbot_teleop/package.xml
+++ b/mecanumbot_teleop/package.xml
@@ -8,7 +8,9 @@
   </description>
   <maintainer email="fortuz19@gmail.com">fortuz</maintainer>
   <license>Apache 2.0</license>
+  <build_depend>mecanumbot_msgs</build_depend>
   <exec_depend>geometry_msgs</exec_depend>
+  <exec_depend>mecanumbot_msgs</exec_depend>
   <exec_depend>rclpy</exec_depend>
   <export>
     <build_type>ament_python</build_type>
